--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -499,4 +499,5 @@
 
     <string name="label_apply">APPLY</string>
     <string name="menu_lockmode">Lock Mode</string>
+    <string name="background_sync">Background Sync</string>
 </resources>
