--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -274,8 +274,8 @@
     <string name="tx_account">Conta #</string>
 
     <string name="send_sweepall">Enviar todo o saldo disponível nesta conta!</string>
-    <string name="tx_subaddress">Subendereço</string>
-    <string name="generate_address_label_sub">Subendereço público #%1$d: %2$s</string>
+    <string name="tx_subaddress">Sub-endereço</string>
+    <string name="generate_address_label_sub">Sub-endereço público #%1$d: %2$s</string>
 
     <string name="menu_language">Idioma</string>
     <string name="language_system_default">Usar o idioma do sistema</string>
@@ -284,7 +284,7 @@
 
     <string name="progress_ledger_progress">Comunicando com a Ledger</string>
     <string name="progress_ledger_confirm">Necessária confirmação na Ledger!</string>
-    <string name="progress_ledger_lookahead">Recuperando subendereços</string>
+    <string name="progress_ledger_lookahead">Recuperando sub-endereços</string>
     <string name="progress_ledger_verify">Verificando chaves</string>
     <string name="progress_ledger_opentx">Fazendo cálculos incríveis</string>
     <string name="progress_ledger_mlsag">Encriptando as coisas</string>
@@ -325,7 +325,7 @@
     <string name="node_nobookmark">Melhores %1$d nós adicionados aos favoritos</string>
     <string name="label_test">Testar</string><!--note: as in "Test a network connection"-->
 
-    <string name="backup_success">Backup feito com successo</string>
+    <string name="backup_success">Backup feito com sucesso</string>
 
     <string name="send_address_hint">Destinatário</string>
 
@@ -341,7 +341,7 @@
 
     <string name="toast_ledger_start_app">Iniciar o App Monero em %1$s</string>
 
-    <string name="menu_rescan">Reescanear!</string>
+    <string name="menu_rescan">Re-escanear!</string>
 
     <string name="onboarding_agree">Eu entendi!</string>
     <string name="onboarding_button_next">Próximo</string>
@@ -393,12 +393,12 @@ aqui.</string>
     ]]></string>
 
     <string name="subbaddress_title">Subendereços</string>
-    <string name="subbaddress_name_hint">Nome do Subendereço</string>
+    <string name="subbaddress_name_hint">Nome do Sub-endereço</string>
     <string name="max_subaddress_warning">Muitos endereços não utilizados - use alguns antes de criar novos!</string>
     <string name="max_account_warning">Muitas contas não utilizadas - use algumas para poder criar novas!</string>
-    <string name="subaddress_tx_label">Transações para esse subendereço:</string>
-    <string name="subaddress_notx_label">Nenhuma transação para esse subendereço ainda</string>
-    <string name="subaddress_select_label">Selecione um subendereço</string>
+    <string name="subaddress_tx_label">Transações para esse sub-endereço:</string>
+    <string name="subaddress_notx_label">Nenhuma transação para esse sub-endereço ainda</string>
+    <string name="subaddress_select_label">Selecione um sub-endereço</string>
     <string name="subaddress_details_hint">Toque e segure para mais detalhes</string>
 
     <string name="delete_alert_message">Esta carteira será excluída. Seus fundos desaparecerão para sempre, a não ser que você tenha sua semente guardada ou um backup funcional para recuperá-la.</string>
@@ -409,7 +409,7 @@ aqui.</string>
     <string name="restore_failed">Importação falhou!</string>
 
     <string name="menu_deletecache">Resetar carteira!</string>
-    <string name="deletecache_alert_message"><![CDATA[Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas & nomes de subendereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
+    <string name="deletecache_alert_message"><![CDATA[Esta carteira será redefinida, perdendo todos os dados "off-chain" (como notas, contas & nomes de sub-endereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
 
     <string name="node_tor_error">Necessário Tor</string>
     <string name="node_waiting">\u00A0ESPERANDO PELO NÓ\u00A0</string>
@@ -419,27 +419,27 @@ aqui.</string>
     <string name="label_seed_offset_encrypt">Encriptação da Semente (EXPERIMENTAL)</string>
     <string name="seed_offset_hint">Senha de dedução da semente (opcional)</string>
 
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Configurações</string>
     <string name="title_iface">Interface</string> <!-- like: User Intreface -->
-    <string name="title_info">Information</string>
-    <string name="setting_daynight">Day / Night</string>
+    <string name="title_info">Informação</string>
+    <string name="setting_daynight">Dia / Noite</string>
 
-    <string name="setting_theme">Style</string>
+    <string name="setting_theme">Tema</string>
     <string-array name="themes">
-        <item>Classic</item>
+        <item>Clássico</item>
         <item>Baldaŭ</item> <!-- do not translate this one -->
     </string-array>
 
-    <string name="message_qr_failed">Failed to create QR for sharing!</string>
+    <string name="message_qr_failed">Falha ao criar QR Code para compartilhamento!</string>
 
-    <string name="tx_locked">Transaction amount locked until block %1$d (in %2$d blocks ≈ %3$,.2f days)</string>
+    <string name="tx_locked">Quantidade de transações limitada até o bloco %1$d (em %2$d blocos ≈ %3$,.2f dias)</string>
 
-    <string name="label_streetmode">Street Mode enabled\nOnly new transactions will be shown</string>
+    <string name="label_streetmode">Modo rua ativado\nSomente transações novas serão mostradas</string>
 
-    <string name="pocketchange_info">To reduce waiting time on repeated spending, Monerujo can create spare change at the expense of higher fees. It\'ll try to create and maintain at least 6 coins of the selected amount.</string>
-    <string name="pocketchange_create_title">Create Change</string>
+    <string name="pocketchange_info">Para reduzir o tempo em gastos repetitivos, o Monerujo pode criar trocos ao custo de taxas maiores. Tentará manter pelo menos 6 moedas da quantidade selecionada.</string>
+    <string name="pocketchange_create_title">Criar Troco</string>
 
-    <string name="label_apply">APPLY</string>
+    <string name="label_apply">APLICAR</string>
 
-    <string name="setting_lock">Lock Wallet in Background</string>
+    <string name="setting_lock">Bloquear Carteira em Segundo Plano</string>
 </resources>
