--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -9,8 +9,12 @@
     <string name="menu_help">Ajuda</string>
     <string name="menu_receive">Receber</string>
     <string name="menu_rename">Renomear</string>
+    <string name="menu_delete">Excluir</string>
     <string name="menu_backup">Backup</string>
     <string name="menu_changepw">Alterar Senha</string>
+    <string name="menu_back">Voltar</string>
+    <string name="menu_close">Fechar</string>
+    <string name="menu_cancel">Cancelar</string>
 
     <string name="password_weak">Continue escrevendo &#8230;</string>
     <string name="password_fair">É &#8230;</string>
@@ -91,12 +95,14 @@
 
     <string name="service_progress">Finalizando o processo &#8230;\nPode demorar um pouco</string>
 
+    <string name="backup_success">Backup feito com sucesso</string>
     <string name="backup_failed">Erro ao criar backup!</string>
+    <string name="delete_failed">Erro ao excluir backup!</string>
     <string name="rename_failed">Erro ao renomear!</string>
     <string name="changepw_failed">Erro ao alterar senha!</string>
     <string name="changepw_success">Senha alterada</string>
 
-    <string name="label_daemon">Nó</string>
+    <string name="label_daemon">Rede</string>
     <string name="status_wallet_loading">Carregando &#8230;</string>
     <string name="status_wallet_unloaded">Carteira salva</string>
     <string name="status_wallet_unload_failed">Erro ao salvar carteira</string>
@@ -139,7 +145,7 @@
 
     <string name="status_synced">Sincronizado:</string>
     <string name="status_remaining">Blocos restantes</string>
-    <string name="status_syncing">Escaneando:</string>
+    <string name="status_syncing">Sincronizando:</string>
 
     <string name="message_camera_not_permitted">Sem câmera = Impossível escanear códigos QR!</string>
 
@@ -202,13 +208,17 @@
     <string name="generate_check_address">Escreva um endereço válido</string>
     <string name="generate_check_mnemonic">Escreva a semente de 25 palavras</string>
 
-    <string name="send_notes_hint">Notas (opcional)</string>
+    <string name="send_notes_hint">Notas Privadas (opcional)</string>
     <string name="send_generate_paymentid_hint">Gerar</string>
     <string name="send_send_label">Gastar meu querido Monero!</string>
     <string name="send_send_timed_label">Gastar meu querido Monero (%1$s)</string>
     <string name="send_qr_invalid">Isso não é um código QR</string>
     <string name="send_qr_address_invalid">Código QR inválido</string>
     <string name="send_address_invalid">Endereço inválido</string>
+    <string name="send_address_not_openalias">Endereço OpenAlias não disponível</string>
+    <string name="send_address_openalias">OpenAlias seguro &#x2714;</string>
+    <string name="send_address_resolve_openalias">Determinando OpenAlias&#8230;</string>
+    <string name="send_address_no_dnssec">OpenAlias sem DNSSEC - endereço pode ser sido falsificado</string>
     <string name="send_title">Enviar</string>
     <string name="send_available">Saldo: %1$s XMR</string>
     <string name="send_address_title">Endereço</string>
@@ -233,7 +243,7 @@
     <string name="tx_list_amount_negative">- %1$s</string>
     <string name="tx_list_amount_positive">+ %1$s</string>
 
-    <string name="tx_timestamp">Data/hora</string>
+    <string name="tx_timestamp">Data</string>
     <string name="tx_id">ID TX</string>
     <string name="tx_key">Chave TX</string>
     <string name="tx_destination">Destino</string>
@@ -250,17 +260,21 @@
     <string name="tx_failed">FALHOU</string>
 
     <string name="receive_amount_hint">Valor</string>
+    <string name="receive_desc_hint">Descrição (opcional)</string>
     <string name="receive_cannot_open">Não foi possível abrir a carteira!</string>
 
     <string name="receive_amount_too_big">Máx. %1$s</string>
     <string name="receive_amount_negative">Mín. 0</string>
-    <string name="receive_amount_nan">O valor não é numérico</string>
+    <string name="receive_amount_nan">XMR não é um número</string>
+    <string name="copy_receive_address">Copiar endereço de recebimento</string>
+    <string name="paste_give_address">Colar endereço de envio</string>
 
     <string name="details_alert_message">Dados importantes serão exibidos.\nCertifique-se que ninguém está espiando!</string>
     <string name="details_alert_yes">Estou seguro</string>
     <string name="details_alert_no">Tire-me daqui!</string>
     <string name="details_title">Detalhes</string>
 
+    <string name="delete_alert_message">Esta carteira será excluída. Seus fundos desaparecerão para sempre, a não ser que você tenha sua semente guardada ou um backup funcional para recuperá-la.</string>
     <string name="delete_alert_yes">Sim, pode fazer!</string>
     <string name="delete_alert_no">Não, obrigado!</string>
 
@@ -274,8 +288,8 @@
     <string name="tx_account">Conta #</string>
 
     <string name="send_sweepall">Enviar todo o saldo disponível nesta conta!</string>
-    <string name="tx_subaddress">Subendereço</string>
-    <string name="generate_address_label_sub">Subendereço público #%1$d: %2$s</string>
+    <string name="tx_subaddress">Sub-endereço</string>
+    <string name="generate_address_label_sub">Sub-endereço público #%1$d: %2$s</string>
 
     <string name="menu_language">Idioma</string>
     <string name="language_system_default">Usar o idioma do sistema</string>
@@ -284,7 +298,7 @@
 
     <string name="progress_ledger_progress">Comunicando com a Ledger</string>
     <string name="progress_ledger_confirm">Necessária confirmação na Ledger!</string>
-    <string name="progress_ledger_lookahead">Recuperando subendereços</string>
+    <string name="progress_ledger_lookahead">Recuperando sub-endereços</string>
     <string name="progress_ledger_verify">Verificando chaves</string>
     <string name="progress_ledger_opentx">Fazendo cálculos incríveis</string>
     <string name="progress_ledger_mlsag">Encriptando as coisas</string>
@@ -325,8 +339,6 @@
     <string name="node_nobookmark">Melhores %1$d nós adicionados aos favoritos</string>
     <string name="label_test">Testar</string><!--note: as in "Test a network connection"-->
 
-    <string name="backup_success">Backup feito com successo</string>
-
     <string name="send_address_hint">Destinatário</string>
 
     <string name="street_sweep_amount">TUDO!</string> <!-- as in: "everything in the account" = "all the money" -->
@@ -341,7 +353,7 @@
 
     <string name="toast_ledger_start_app">Iniciar o App Monero em %1$s</string>
 
-    <string name="menu_rescan">Reescanear!</string>
+    <string name="menu_rescan">Re-escanear!</string>
 
     <string name="onboarding_agree">Eu entendi!</string>
     <string name="onboarding_button_next">Próximo</string>
@@ -393,23 +405,20 @@ aqui.</string>
     ]]></string>
 
     <string name="subbaddress_title">Subendereços</string>
-    <string name="subbaddress_name_hint">Nome do Subendereço</string>
+    <string name="subbaddress_name_hint">Nome do Sub-endereço</string>
     <string name="max_subaddress_warning">Muitos endereços não utilizados - use alguns antes de criar novos!</string>
     <string name="max_account_warning">Muitas contas não utilizadas - use algumas para poder criar novas!</string>
-    <string name="subaddress_tx_label">Transações para esse subendereço:</string>
-    <string name="subaddress_notx_label">Nenhuma transação para esse subendereço ainda</string>
-    <string name="subaddress_select_label">Selecione um subendereço</string>
+    <string name="subaddress_tx_label">Transações para esse sub-endereço:</string>
+    <string name="subaddress_notx_label">Nenhuma transação para esse sub-endereço ainda</string>
+    <string name="subaddress_select_label">Selecione um sub-endereço</string>
     <string name="subaddress_details_hint">Toque e segure para mais detalhes</string>
 
-    <string name="delete_alert_message">Esta carteira será excluída. Seus fundos desaparecerão para sempre, a não ser que você tenha sua semente guardada ou um backup funcional para recuperá-la.</string>
-    <string name="menu_delete">Excluir</string><!-- like: "Delete wallet!" -->
-    <string name="delete_failed">Exclusão falhou!</string>
 
     <string name="menu_restore">Importar carteira</string>
     <string name="restore_failed">Importação falhou!</string>
 
     <string name="menu_deletecache">Resetar carteira!</string>
-    <string name="deletecache_alert_message"><![CDATA[Esta carteira será resetada, perdendo todos os dados "off-chain" (como notas, contas & nomes de subendereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
+    <string name="deletecache_alert_message"><![CDATA[Esta carteira será redefinida, perdendo todos os dados "off-chain" (como notas, contas & nomes de sub-endereços, chaves de transações privadas, …)! Use isso SOMENTE se esta carteira estiver corrompida e não carrega!]]></string>
 
     <string name="node_tor_error">Necessário Tor</string>
     <string name="node_waiting">\u00A0ESPERANDO PELO NÓ\u00A0</string>
@@ -419,44 +428,44 @@ aqui.</string>
     <string name="label_seed_offset_encrypt">Encriptação da Semente (EXPERIMENTAL)</string>
     <string name="seed_offset_hint">Senha de dedução da semente (opcional)</string>
 
-    <string name="menu_settings">Settings</string>
+    <string name="menu_settings">Configurações</string>
     <string name="title_iface">Interface</string> <!-- like: User Intreface -->
-    <string name="title_info">Information</string>
-    <string name="setting_daynight">Day / Night</string>
+    <string name="title_info">Informação</string>
+    <string name="setting_daynight">Dia / Noite</string>
 
-    <string name="setting_theme">Style</string>
+    <string name="setting_theme">Tema</string>
     <string-array name="themes">
-        <item>Classic</item>
+        <item>Clássico</item>
         <item>Baldaŭ</item> <!-- do not translate this one -->
     </string-array>
 
-    <string name="message_qr_failed">Failed to create QR for sharing!</string>
+    <string name="message_qr_failed">Falha ao criar QR Code para compartilhamento!</string>
 
-    <string name="tx_locked">Transaction amount locked until block %1$d (in %2$d blocks ≈ %3$,.2f days)</string>
+    <string name="tx_locked">Quantidade de transações limitada até o bloco %1$d (em %2$d blocos ≈ %3$,.2f dias)</string>
 
-    <string name="label_streetmode">Street Mode enabled\nOnly new transactions will be shown</string>
+    <string name="label_streetmode">Modo rua ativado\nSomente transações novas serão mostradas</string>
 
-    <string name="pocketchange_info">To reduce waiting time on repeated spending, Monerujo can create spare change at the expense of higher fees. It\'ll try to create and maintain at least 6 coins of the selected amount.</string>
-    <string name="pocketchange_create_title">Create Change</string>
+    <string name="pocketchange_info">Para reduzir o tempo em gastos repetitivos, o Monerujo pode criar trocos ao custo de taxas maiores. Tentará manter pelo menos 6 moedas da quantidade selecionada.</string>
+    <string name="pocketchange_create_title">Criar Troco</string>
 
-    <string name="label_apply">APPLY</string>
+    <string name="label_apply">APLICAR</string>
 
-    <string name="setting_lock">Lock Wallet in Background</string>
+    <string name="setting_lock">Bloquear Carteira em Segundo Plano</string>
 
     <string name="menu_bluetooth">Connect Sidekick</string>
-    <string name="bluetooth_select_label">Select Sidekick device</string>
+    <string name="bluetooth_select_label">Selecionar dispositivo Sidekick</string>
 
-    <string name="bluetooth_permissions">Bluetooth permissions are required to connect your Sidekick Wallet!</string>
+    <string name="bluetooth_permissions">Permissão ao Bluetooth é necessária para conectar à sua carteira Sidekick!</string>
     <string name="bluetooth_permissions_ok">OK</string>
-    <string name="bluetooth_permissions_settings">App Settings</string>
-    <string name="bluetooth_permissions_cancel">Cancel</string>
+    <string name="bluetooth_permissions_settings">Configurações do App</string>
+    <string name="bluetooth_permissions_cancel">Cancelar</string>
 
     <string name="sidekick_pin">PIN: %1$s</string>
-    <string name="sidekick_not_connected">[not connected]</string>
-    <string name="sidekick_confirm_tx">Confirm Transaction</string>
-    <string name="sidekick_network_warning">Network is on - this is a security risk. It is recommended
-        to turn on flight mode and restart the app with only Bluetooth enabled!</string>
-    <string name="open_wallet_sidekick_missing">Please connect Sidekick device</string>
-    <string name="fab_restore_sidekick">Restore from Sidekick</string>
-    <string name="sidekick_connected">Sidekick Connected</string>
+    <string name="sidekick_not_connected">[não conectado]</string>
+    <string name="sidekick_confirm_tx">Confirmar Transação</string>
+    <string name="sidekick_network_warning">A rede está ativa - isso é risco à segurança. É recomendado
+        ativar o modo avião e reiniciar o app com somente o Bluetooth ativado.</string>
+    <string name="open_wallet_sidekick_missing">Por favor conecte o dispositivo Sidekick</string>
+    <string name="fab_restore_sidekick">Restaurar do Sidekick</string>
+    <string name="sidekick_connected">Sidekick Conectado</string>
 </resources>
