--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -32,50 +32,29 @@
     <string name="info_xmrto_enabled">Plată BTC activată, apasă pentru mai multe informații.</string>
     <string name="info_ledger_enabled">Ledger activată, apasă pentru mai multe informații.</string>
 
-    <string name="info_xmrto"><![CDATA[
-        <b>Ai introdus o adresă de %1$s.</b><br/>
-        <i>Vei trimite XMR și destinatarul va primi %2$s folosind serviciul <b>%3$s</b>.</i>
-    ]]></string>
-
-    <string name="info_send_xmrto_success_order_label">Ordin %1$s</string>
-
     <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
     <string name="info_send_xmrto_paid">Confirmare în așteptare</string>
     <string name="info_send_xmrto_unpaid">Plată în așteptare</string>
-    <string name="info_send_xmrto_error">Eroare %1$s (%2$s)</string>
     <string name="info_send_xmrto_sent">%1$s trimis!</string>
     <string name="info_send_xmrto_query">Interogare &#8230;</string>
 
-    <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Poți trimite %1$s &#8212; %2$s %4$s</b>.<br/>
-        <i><b>%5$s</b> îți oferă un curs de <b>%3$s %4$s/XMR</b> <u>în acest moment</u></i>.
-    ]]></string>
-
-    <string name="send_available_btc">Balanță: %1$s XMR (~%2$s %3$s)</string>
+    <string name="send_available_btc">Balanță: %2$s %3$s (%1$s XMR)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Payment ID integrat</string>
     <string name="info_prepare_tx">Se pregătește tranzacția</string>
 
-    <string name="label_send_progress_xmrto_create">Creearea ordinului</string>
-    <string name="label_send_progress_xmrto_query">Interogare ordin</string>
     <string name="label_send_progress_create_tx">Pregătirea tranzacției Monero</string>
 
-    <string name="label_send_progress_queryparms">Interogare parametrii</string>
 
-    <string name="label_generic_xmrto_error">EROARE</string>
     <string name="text_generic_xmrto_error">Cod: %1$d</string>
 
     <string name="text_retry">Atinge pentru reîncercare</string>
     <string name="text_noretry_monero">Pff.. ne-am blocat acum!</string>
-    <string name="text_noretry">Oh, serviciul %1$s este momentan indisponibil!</string>
 
     <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
     <string name="text_send_btc_rate">(Rată: %1$s %2$s/XMR)</string>
 
-    <string name="label_send_btc_xmrto_info">Vizitează %1$s pentru suport &amp; interogare</string>
-    <string name="label_send_btc_xmrto_key_lb">Cheia secretă \n%1$s</string>
-    <string name="label_send_btc_xmrto_key">Cheia secretă %1$s</string>
     <string name="label_send_btc_address">Destinație adresă %1$s</string>
     <string name="label_send_btc_amount">Sumă</string>
 
@@ -360,7 +339,6 @@
     <string name="onboarding_seed_title">Păstrează semnătura ta în singuranță</string>
     <string name="onboarding_seed_information">Semnătura oferă accces deplin celui ce o are. Dacă o pierzi, nu te putem ajuta să o recuperezi și pierzi dulcii tăi moneroj.</string>
     <string name="onboarding_xmrto_title">Trimite Cripto</string>
-    <string name="onboarding_xmrto_information">Monerujo are integrat serviciul exchange. Doar inserează sau scanează o adresă BTC, LTC, ETH, TRXUSDT sau SOL și vei trimite aceste monede cu XMR.</string>
     <string name="onboarding_nodes_title">Noduri, cum îți dorești</string>
     <string name="onboarding_nodes_information">Nodurile te conectează la rețeaua Monero. Alege între noduri publice sau fii un cypherpunk și pornește unul propriu.</string>
     <string name="onboarding_fpsend_title">Trimite cu amprentă</string>
