Remove translations with duplicate English strings
Linter no longer complains about this, this causes confusion on how much of monerujo is translated, this breaks translation language fallback (e.g. get translations from pt if pt-br doesn't have them)

Includes mixed strings unfortunately, mostly found in the help strings, where there were a few that have english in the middle, unfortunately... having them would mean they would likely be skipped over, there's no way I know to fix this, a lot of these though need overall maintenance, and it's better to make the job easier for the translators than to keep a potentially confusing/breaking translation

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,9 +10,9 @@
   <string name="menu_delete">حذف</string>
   <string name="menu_backup">نسخ احتياطي</string>
   <string name="menu_changepw">تغيير كلمة المرور</string>
-  <string name="menu_back" tools:ignore="MissingTranslation">العودة</string>
-  <string name="menu_close" tools:ignore="MissingTranslation">إغلاق</string>
-  <string name="menu_cancel" tools:ignore="MissingTranslation">إلغاء</string>
+  <string name="menu_back">العودة</string>
+  <string name="menu_close">إغلاق</string>
+  <string name="menu_cancel">إلغاء</string>
   <string name="password_weak">استمر في الكتابة ...</string>
   <string name="password_fair">متوسط...</string>
   <string name="password_good">يمكنك القيام به على نحو أفضل حاول مرة أخرى</string>
@@ -223,8 +223,8 @@
   <string name="receive_amount_too_big">الحد الأقصى. %1$s</string>
   <string name="receive_amount_negative">الحد الأدنى 0</string>
   <string name="receive_amount_nan">XMR ليس رقما</string>
-  <string name="copy_receive_address" tools:ignore="MissingTranslation">انسخ عنوان الاستلام</string>
-  <string name="paste_give_address" tools:ignore="MissingTranslation">ألصق عنوان المتلقي</string>
+  <string name="copy_receive_address">انسخ عنوان الاستلام</string>
+  <string name="paste_give_address">ألصق عنوان المتلقي</string>
   <string name="details_alert_message">سيتم الآن عرض بيانات حساسة. تأكد انك في مكان أمن.
  أنظر خلفك!</string>
   <string name="details_alert_yes">انا بآمن متابعة</string>
