--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -54,9 +54,7 @@
     <string name="rename_failed">¡Cambio de nombre fallido!</string>
     <string name="changepw_failed">¡Cambio de contraseña fallido!</string>
     <string name="changepw_success">Contraseña cambiada</string>
-
-    <string name="label_daemon">Nodo</string>
-    <string name="status_wallet_loading">Cargando monedero&#8230;</string>
+    <string name="status_wallet_loading">Cargando monedero…</string>
     <string name="status_wallet_unloaded">Monedero guardado</string>
     <string name="status_wallet_unload_failed">¡Fallo al guardar el monedero!</string>
     <string name="status_wallet_connecting">Conectando&#8230;</string>
@@ -81,7 +79,6 @@
     <string name="bad_password">¡Contraseña incorrecta!</string>
     <string name="bad_saved_password">La contraseña guardada es incorrecta.\nIngrésala manualmente.</string>
     <string name="bad_wallet">¡El monedero no existe!</string>
-    <string name="prompt_daemon_missing">¡La dirección del daemon debe estar configurada!</string>
     <string name="prompt_wrong_net">El monedero no coincide con la red seleccionada</string>
 
     <string name="label_watchonly">(Sólo Vista)</string>
@@ -90,9 +87,6 @@
     <string name="label_wallet_send">Enviar</string>
 
     <string name="xmr_unconfirmed_amount">+ %1$s %2$s sin confirmar</string>
-
-    <string name="service_description">Monedero abierto</string>
-
     <string name="status_synced">Sincronizado:</string>
     <string name="status_remaining">bloques restantes</string>
     <string name="status_syncing">Sincronizando:</string>
@@ -299,8 +293,6 @@
 
     <string name="status_wallet_connect_wrongversion">Versión de nodo incompatible - ¡por favor actualiza!</string>
 
-    <string name="menu_info">Secretos</string><!--Changed to: Show Secrets!-->
-
     <string name="menu_streetmode">Modo calle</string>
 
     <string name="info_nodes_enabled">Nodo-matiC habilitado, toque para más información.</string>
@@ -434,7 +426,6 @@
     <string name="tx_locked">Monto trabado hasta el bloque %1$d (faltan %2$d bloques ≈ %3$,.2f días)</string>
 
     <string name="label_streetmode">Modo calle activado\nSólo se ºmostrarán transacciones nuevas</string>
-    <string name="pocketchange_info">Para reducir el tiempo entre pagos, Monerujo puede crear cambio de más al enviar a costo de comisiones más altas. Va a crear e intentar mantener 10 monedas del monto seleccionado.</string>
     <string name="pocketchange_create_title">Crear cambio</string>
 
     <string name="label_apply">APLICAR</string>
