--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -30,54 +30,33 @@
 
     <string name="label_receive_info_gen_qr_code">Klepni pre QR kód</string>
 
-    <string name="info_xmrto_enabled">BTC platby aktivované, klepni pre viac info.</string>
     <string name="info_ledger_enabled">Ledger aktivovaný, klepni pre viac info.</string>
-
-    <string name="info_xmrto"><![CDATA[
-        <b>Vložil si %1$s adresu.</b><br/>
-        <i>Pošleš XMR a adresát dostane %2$s cez službu <b>%3$s</b>.</i>
-    ]]></string>
-
-    <string name="info_send_xmrto_success_order_label">%1$s Objednávka</string>
 
     <string name="info_send_xmrto_success_btc">%1$s %2$s</string>
 
 
     <string name="info_send_xmrto_paid">Čaká na Potvrdenie</string>
     <string name="info_send_xmrto_unpaid">Čakajúca Platba</string>
-    <string name="info_send_xmrto_error">%1$s Chyba (%2$s)</string>
     <string name="info_send_xmrto_sent">%1$s Odoslané!</string>
     <string name="info_send_xmrto_query">Zisťujem &#8230;</string>
 
-    <string name="info_send_xmrto_parms"><![CDATA[
-        <b>Môžeš poslať %1$s &#8212; %2$s %4$s</b>.<br/>
-        <i><b>%5$s</b> ti dáva výmenný kurz of <b>%3$s %4$s/XMR</b> <u>práve teraz</u></i>.
-    ]]></string>
 
     <string name="send_available_btc">Zostatok: %1$s XMR (~%2$s %3$s)</string>
 
     <string name="info_paymentid_integrated">&#x2714; Payment ID integrované</string>
     <string name="info_prepare_tx">Pripravujem transakciu</string>
 
-    <string name="label_send_progress_xmrto_create">Vytváram objednávku</string>
-    <string name="label_send_progress_xmrto_query">Pýtam sa na objednávku</string>
     <string name="label_send_progress_create_tx">Pripravujem Monero transakciu</string>
 
-    <string name="label_send_progress_queryparms">Posielam parametre</string>
 
-    <string name="label_generic_xmrto_error">CHYBA</string>
     <string name="text_generic_xmrto_error">Kód chyby: %1$d</string>
 
     <string name="text_retry">Klepni pre opakovanie</string>
     <string name="text_noretry_monero">Uviazli sme tu!</string>
-    <string name="text_noretry">Myslím, že služba %1$s nie je momentálne dostupná!</string>
 
     <string name="text_send_btc_amount">%1$s %3$s = %2$s XMR</string>
     <string name="text_send_btc_rate">(Kurz: %1$s %2$s/XMR)</string>
 
-    <string name="label_send_btc_xmrto_info">Navštív %1$s pre podporu &amp; tracking</string>
-    <string name="label_send_btc_xmrto_key_lb">Tajný kľúč\n%1$s</string>
-    <string name="label_send_btc_xmrto_key">%1$s Tajný kľúč</string>
     <string name="label_send_btc_address">Cieľová %1$s Adresa</string>
     <string name="label_send_btc_amount">Čiastka</string>
 
@@ -97,7 +76,6 @@
     <string name="changepw_failed">Zmena hesla zlyhala!</string>
     <string name="changepw_success">Heslo zmenené</string>
 
-    <string name="label_daemon">Uzol</string>
     <string name="status_wallet_loading">Načítavam peňaženku &#8230;</string>
     <string name="status_wallet_unloaded">Peňaženka uložená</string>
     <string name="status_wallet_unload_failed">Uloženie zlyhalo!</string>
@@ -125,7 +103,6 @@
     <string name="bad_password">Nesprávne heslo!</string>
     <string name="bad_saved_password">Uložené heslo je nesprávne.\nProsím vlož heslo manuálne.</string>
     <string name="bad_wallet">Peňaženka neexistuje!</string>
-    <string name="prompt_daemon_missing">Adresa uzla musí byť nastavená!</string>
     <string name="prompt_wrong_net">Peňaženka sa nezhoduje s vybranou sieťou</string>
 
     <string name="label_watchonly">(Len k nahliadaniu)</string>
@@ -134,8 +111,6 @@
     <string name="label_wallet_send">Poslať</string>
 
     <string name="xmr_unconfirmed_amount">+ %1$s %2$s nepotvrdených</string>
-
-    <string name="service_description">monerujo Service</string>
 
     <string name="status_synced">Synchronizované:</string>
     <string name="status_remaining">zostávajúcich blokov</string>
@@ -304,7 +279,7 @@
 
     <string name="status_wallet_connect_wrongversion">Nekompatibilný s verziou uzla - nutná aktualizácia!</string>
 
-    <string name="menu_info">Ukázať Tajné Kľúče</string><!--Changed to: Show Secrets!-->
+    <string name="menu_info">Ukázať Tajné Kľúče</string>
 
     <string name="menu_streetmode">Mód Ulica</string>
     <string name="info_nodes_enabled">Node-o-matiC povolený, klepni pre viac info.</string>
